--- a/references.bib
+++ b/references.bib
@@ -77,13 +77,16 @@
 	file = {National Real Estate Development and Sales in 2016:files/26/t20170122_1456808.html:text/html}
 }
 
-@misc{noauthor_climate_nodate,
+@misc{kowitt_climate_2017,
 	title = {Climate {Change} {Is} {About} to {Remake} the {Insurance} {Industry}},
 	url = {http://fortune.com/2017/07/25/climate-change-insurance-industry/},
 	abstract = {How do you insure against a flood you know will come?},
 	language = {en},
 	urldate = {2018-03-06},
 	journal = {Fortune},
+	author = {Kowitt, Beth},
+	month = jul,
+	year = {2017},
 	file = {Snapshot:files/29/climate-change-insurance-industry.html:text/html}
 }
 
