--- a/index.Rmd
+++ b/index.Rmd
@@ -19,26 +19,13 @@ readLines('https://www.zotero.org/api/users/4672538/items/top?limit=25&format=bi
 
 # Welcome! {-}
 
-<!-- You can include images saved within your repo... -->
-```{r hello-world,echo=FALSE,fig.cap='Hello World!',fig.align='center',out.width='50%'}
-knitr::include_graphics('img/hello-world.png')
-```
+### Abstract: Self-Learning and Efficacy while Controlling for Personality Differences {#GritDistribution}
 
-Pariatur sapiente anim  waistcoat bicycle rights.  Cupidatat  chambray portland direct trade, XOXO odio gochujang banjo deep v sustainable.  Sint  jianbing DIY humblebrag heirloom exercitation ennui fanny pack.  Dolore small batch lomo, godard slow-carb odio exercitation organic cred cray la croix vinyl nisi hot chicken.  Gentrify schlitz stumptown fam, cray hoodie excepteur  hammock kinfolk 8-bit hell of plaid.  Helvetica hashtag pinterest typewriter, tbh vape vero farm-to-table.  Laboris  bitters aliqua small batch.
-
-<!-- Below this line is just examples of how you can embed video from Google Drive. First you have to enable sharing, then just get the object ID which is that long string between d/ and /preview and will also be appended to any sharing link you generate for your video. -->
-<p>
-```{r hello-benji,echo=FALSE,fig.cap='Hello Benjamin Franklin!',fig.align='center'}
-knitr::include_url('https://drive.google.com/file/d/0B6bobRDQR96iVEV3SXJJal9CczQ/preview')
-```
-
-### Abstract of my first cool idea {-}
-
-Pop-up occupy labore, pug tofu nisi franzen YOLO tilde tumblr deep v nulla  aliqua.  Sapiente stumptown et lo-fi art party.  Eu  snackwave glossier, poutine crucifix tattooed labore thundercats hexagon tempor brunch single-origin coffee synth four loko.  Velit  beard ex etsy migas, tempor hashtag.  Live-edge fap yr food truck, heirloom snackwave tempor laborum green juice man bun selvage sriracha gastropub.  Before they sold out incididunt godard cupidatat  exercitation street art health goth ullamco, flannel dolore kombucha bespoke.  Pok pok tilde mixtape, magna swag iceland tote bag gentrify dolor  delectus.
+Humans are motivated by a wide array of stimuli. Researchers like Angela Duckworth and Alfred Bandura, have demonstrated that specific human characteristics are the most predictive to goal completion. This study aims to design a customized application based on these characteristics to incentive to maintain motivation on education for students. Curated with content specifically developed for maintaining Grit and Self Efficacy. 
 
 ### Abstract: Disaster Centric Real Estate Valuation (D-CREV) {#Disaster-Properties}
 
-The devastation caused from recent hurricanes to metropoletan areas and a lack of coverage on homes by National Flood Insurance creates an unusual possible real estate arbitrage opporunity. Uninsured flooded homes unable to renovate, sell marketly below prior estimated list prices due to damage from the storm. This study aims to examine public and private data sources to determine the validity of homes impacted by flooding from Hurricanes and if findings show they recover their value and what the characteristics are of such these investments.
+The devastation caused from recent hurricanes to metropoletan areas and a lack of coverage by National Flood Insurance creates an unusual real estate arbitrage opporunity. Uninsured flooded homes unable to renovate, sell marketly below prior estimated list prices due to damage from the storm. This study aims to examine public and private data sources to determine the validity of homes impacted by flooding from Hurricanes and if findings show they recover their value, the characteristics of these investments.
 
 ### Abstract of my third cool idea {-}
 
